# confine

./: .gitignore  Cargo.toml  Dockerfile  README.md
confine-probes/: Cargo.toml
confine-probes/src/: lib.rs
confine-probes/src/tracer/: main.rs  mod.rs
examples/mirai/: Confinement
examples/simple/: Confinement  example.c
extras/: config.toml  config.yml  syscall_table.json
src/: config.rs  container.rs  error.rs  lib.rs  logger.rs  main.rs  policy.rs  ptrace.rs  syscall.rs  threat.rs  trace.rs
src/container/: bridge.rs  mod.rs
src/enforcers/: mod.rs  seccomp.rs
src/policy/: filter.rs  mod.rs
src/syscall/: defs.rs  mod.rs
src/threat/: capabilities.rs  mod.rs
src/trace/: ebpf.rs  lib.rs  mod.rs  ptrace.rs  subprocess.rs  template.c  trace.c  trace.rs
src/trace/ebpf/: template.c
