[package]
name = "confine"
description = "Dynamic threat detection sandbox"
version = "3.1.0"

edition = "2018"

[dependencies]
clap = "2.33.0"
regex = "1.2.0"
lazy_static = "1.3.0"

libc = "0.2"
nix = "0.19.1"

serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
