[package]
name = "confine"
description = "Dynamic threat detection container"

authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/confine"
repository = "https://github.com/ex0dus-0x/confine"
readme = "README.md"

version = "3.1.2"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
clap = "2.33.0"
names = { version = "0.11.0", default-features = false }

log = "0.4"
pretty_env_logger = "0.4"

flate2 = "1.0.19"
tar = "0.4.30"

ureq = "2.0.1"

libc = "0.2"
nix = "0.19.1"

serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
