[package]
name = "confine"
description = "Dynamic threat detection container"

authors = ["ex0dus-0x <ex0dus@codemuch.tech>"]
license = "MIT"

homepage = "https://github.com/ex0dus-0x/confine"
repository = "https://github.com/ex0dus-0x/confine"
readme = "README.md"

version = "3.1.2"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
redbpf = { version = "*", features = ["load"] }
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync", "macros"] }
tracing-subscriber = "0.2"
tracing = "0.1"
futures = "0.3"

confine_probes = { path = "./confine-probes" }

clap = "2.33.0"
names = { version = "0.11.0", default-features = false }

lazy_static = "1.4.0"

log = "0.4"
env_logger = "0.8.2"

flate2 = "1.0.19"
tar = "0.4.30"

ureq = { version = "2.0", features = ["charset"] }

libc = "0.2"
nix = "0.19.1"
walkdir = "2"

serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"


